refactor: Add User match logic at 'Post' and 'Comment' PUT Reqeust